Closed Bug 187798 Opened 23 years ago Closed 13 years ago

Recipient column in Drafts (and Template) folder contains Sender for message with no recipient

Categories

(MailNews Core :: Backend, defect)

defect
Not set
minor

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 24.0

People

(Reporter: jpmat296, Assigned: sshagarwal)

References

(Blocks 1 open bug, )

Details

(Keywords: helpwanted, Whiteboard: [gs])

Attachments

(1 file, 1 obsolete file)

User-Agent: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030105 Build Identifier: Mozilla/5.0 (X11; U; Linux i686; en-US; rv:1.3b) Gecko/20030105 If you compose a message with no recipient and if you save it as draft, the recipient column in Draft folder contains Sender (your name) instead of nothing (or something like "no recipient"). Reproducible: Always Steps to Reproduce: 1.Open Mail module 2.Click on button Compose 3.Write some words in the body of mail 4.Write anything in Subject 5.Save it as draft (File > Save As > Draft) 6.Go to your Drafts folder Actual Results: Recipient column for your draft mail contains your name. Expected Results: Recipient column for your draft mail should contain nothink (blank) or something like "no recipient". Does this bug has a link with bug 36488 ?
QA Contact: laurel → esther
This is true in Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.5) Gecko/20031007 Couldn't find a dupe, confirming.
Status: UNCONFIRMED → NEW
Ever confirmed: true
OS: Linux → All
Hardware: PC → All
[Mozilla/5.0 (Windows; U; Win98; en-US; rv:1.7b) Gecko/20040316] (W98SE) I tracked the folder loading code to {{ <http://lxr.mozilla.org/mozilla/source/mailnews/base/resources/content/threadPane.js> 406 function RerootThreadPane() 407 { 408 var treeView = gDBView.QueryInterface(Components.interfaces.nsITreeView); 409 if (treeView) 410 { 411 var tree = GetThreadTree(); 412 tree.boxObject.QueryInterface(Components.interfaces.nsITreeBoxObject).view = treeView; 413 } 414 } }} The tree rows load in the UI after line 412 execution. Wild-guessing, I suspect 'Recipient' value is non-existent, then something defaults to 'From' value !?? neil: Where (file) and How (DomI/JS.D./ or is it Cpp) can I see the actual data feeding (code) ? (to see why 'From' value is displayed in 'Recipent' column)
Severity: minor → normal
Keywords: helpwanted
Sorry, this is a difficult one... it's actually stored like this in the summary file, you'd have to find the code that summarizes messages and remove the bit that substitutes the author if no recipients are specified, wherever that might be, somewhere in the dark C++ depths no doubt.
Product: Browser → Seamonkey
Assignee: sspitzer → mail
visible on Mozilla/5.0 (Windows; U; Windows NT 5.0; en-US; rv:1.9a1) Gecko/20050913 SeaMonkey/1.1a
Moving to Core per comment 3 (dupe from TB forthcoming).
Severity: normal → minor
Component: MailNews: Main Mail Window → MailNews: Backend
Product: Mozilla Application Suite → Core
*** Bug 318100 has been marked as a duplicate of this bug. ***
Assignee: mail → nobody
QA Contact: esther → backend
Product: Core → MailNews Core
7 years later, still found in Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2.8) Gecko/20100802 Lightning/1.0b2 Thunderbird/3.1.2
Blocks: 542261
Summary: Recipient column in Drafts folder contains Sender for message with no recipient → Recipient column in Drafts (and Template) folder contains Sender for message with no recipient
No longer blocks: 542261
Whiteboard: [gs]
Blocks: tb-drafts
Suyash Agarwal (:sshagarwal), I think your excellent work patch in Bug 522886 (implementing all-recipients column) must be touching the very same areas of C++ code where this little bug is located. Perhaps you have even seen this when doing your code. So I thought this might be interesting for you, and perhaps you can shine a light into the "dark C++ depths" mentioned in comment 3: (In reply to neil@parkwaycc.co.uk from comment #3) > Sorry, this is a difficult one... it's actually stored like this in the > summary file, you'd have to find the code that summarizes messages and remove > the bit that substitutes the author if no recipients are specified, wherever > that might be, somewhere in the dark C++ depths no doubt.
From our tests it seems the Recipient being 'me' is not seen in the message itself (no To: field), but stored in the .msf database of the folder. When the Recipient value is displayed in http://mxr.mozilla.org/comm-central/source/mailnews/base/src/nsMsgDBView.cpp#488, unparsedRecipient in that function gets the 'me' value. Mkmelin, do you have an idea where this is coming from when saving as draft?
Flags: needinfo?(mkmelin+mozilla)
No idea, sorry.
Flags: needinfo?(mkmelin+mozilla)
Attached patch Patch (obsolete) — — Splinter Review
This patch makes the recipients field blank if no recipients are specified. If you want me to display some sort of string like "no-recipients" etc, please let me know.
Assignee: nobody → syshagarwal
Status: NEW → ASSIGNED
Attachment #761739 - Flags: feedback?(acelists)
Comment on attachment 761739 [details] [diff] [review] Patch Review of attachment 761739 [details] [diff] [review]: ----------------------------------------------------------------- So this seems to work. I just wonder if there wasn't a reason this was intentionally filled with the sender instead of nothing. Maybe some other code will break now? Have you run tests with this? Credits go to Neil for finding the right code spot ;)
Attachment #761739 - Flags: feedback?(acelists) → feedback+
Oh, just fix the patch description line.
Attached patch Patch — — Splinter Review
Fixed the patch description. And there seems to be no breakage because of my patch.
Attachment #761739 - Attachment is obsolete: true
Attachment #763144 - Flags: review?(neil)
Comment on attachment 763144 [details] [diff] [review] Patch This looks as if it should work for POP accounts. Anyone tried IMAP yet? (It might not even have the bug.)
Comment on attachment 763144 [details] [diff] [review] Patch Actually it looks like IMAP converts the ENVELOPE into dummy headers which it then eventually sends through this function, so that's already covered.
Attachment #763144 - Flags: review?(neil) → review+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 24.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: