Bug 187798 - Make Recipient column for messages with no recipients show blank. r=Neil